updated payment and order